force-app/main/default/objects/Home_Services_BRD_Process__c/Home_Services_BRD_Process__c.object-meta.xml
<CustomObject>
    <description>BRD Process for the Home Services and A&amp;E Team</description>
    <label>BRD</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>BRD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>