force-app/main/default/objects/Home_Services_BRD_Process__c/fields/A_E_or_Sears__c.field-meta.xml
<CustomField>
    <fullName>A_E_or_Sears__c</fullName>
    <label>A&amp;E or Sears</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;E</fullName>
            </value>
            <value>
                <fullName>Sears</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Custom Brand/ Non-Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>