force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BRD</relationshipLabel>
    <relationshipName>BRD</relationshipName>
    <type>Lookup</type>
</CustomField>