force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Additional_Recall_Rework_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Recall_Rework_Requirements__c</fullName>
    <inlineHelpText>List any additional Recall/Rework information here</inlineHelpText>
    <label>Additional Recall/Rework Requirements</label>
    <type>TextArea</type>
</CustomField>