force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements__c</fullName>
    <label>zDEL_Additional Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Tracking</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>