force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Alternate_source_search_on_parts_be_done__c.field-meta.xml
<CustomField>
    <fullName>Alternate_source_search_on_parts_be_done__c</fullName>
    <inlineHelpText>Explain process if necessary?</inlineHelpText>
    <label>Alternate source search on parts be done</label>
    <type>TextArea</type>
</CustomField>