force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Any_products_DOT_hazardous__c.field-meta.xml
<CustomField>
    <fullName>Any_products_DOT_hazardous__c</fullName>
    <inlineHelpText>Mandatory for OEM, and Recall or Rework</inlineHelpText>
    <label>Any products DOT hazardous?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BRD_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>