force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Age__c.field-meta.xml
<CustomField>
    <fullName>Approval_Age__c</fullName>
    <formula>DATEVALUE(Approval_Date__c) - BRD_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>