force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Age_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Approval_Age_DocuSign__c</fullName>
    <formula>DocuSign_Envelope__r.dsfs__Completed_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Age (DocuSign)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>