force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Aging__c.field-meta.xml
<CustomField>
    <fullName>Approval_Aging__c</fullName>
    <formula>IF(OR(
ISPICKVAL( Approval_Status_Salesforce__c  , &quot;Pending Business Integration&quot;),
ISPICKVAL( Approval_Status_Salesforce__c  , &quot;Pending BIT&quot;), 
ISPICKVAL( Approval_Status_Salesforce__c  , &quot;Pending BRD Review&quot;), 
ISPICKVAL( Approval_Status_Salesforce__c  , &quot;Pending Internal&quot;)),
(Today () -  BRD_Submission_Date__c), null)</formula>
    <label>Approval Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>