force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Date_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_DocuSign__c</fullName>
    <description>Capacity/Routing, Carry-In, CCN, Compliance, Engineering, Legal, NCC, Parts, STAC</description>
    <formula>DocuSign_Envelope__r.dsfs__Completed_Date_Time__c</formula>
    <label>Approval Date (DocuSign)</label>
    <type>DateTime</type>
</CustomField>