force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Date_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Salesforce__c</fullName>
    <description>Business Integration, Channel Operations, Client Support, Finance, In-Home Operations, Pricing, Sales</description>
    <label>Approval Date (Salesforce)</label>
    <type>DateTime</type>
</CustomField>