force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <formula>( BRD_Approval_Process_Name__r.Approval_Stage_Roll_up__c )</formula>
    <label>Approval Stage</label>
    <type>Text</type>
</CustomField>