force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>In Approval Process</fullName>
            </value>
            <value>
                <fullName>Pending Salesforce Approval</fullName>
            </value>
            <value>
                <fullName>Pending DocuSign Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>