force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Status_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_DocuSign__c</fullName>
    <description>Capacity/Routing, Carry-In, CCN, Compliance, Engineering, Legal, NCC, Parts, STAC</description>
    <formula>DocuSign_Envelope__r.dsfs__Envelope_Status__c</formula>
    <inlineHelpText>Capacity/Routing, Carry-In, CCN, Compliance, Engineering, Legal, NCC, Parts, STAC</inlineHelpText>
    <label>Approval Status (DocuSign)</label>
    <type>Text</type>
</CustomField>