force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Approval_Status_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Salesforce__c</fullName>
    <description>Business Integration, Channel Operations, Client Support, Finance, In-Home Operations, Pricing, Sales</description>
    <inlineHelpText>Business Integration, Channel Operations, Client Support, Finance, In-Home Operations, Pricing, Sales</inlineHelpText>
    <label>Approval Status (Salesforce)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending Business Integration</fullName>
            </value>
            <value>
                <fullName>Pending BIT</fullName>
            </value>
            <value>
                <fullName>Pending BRD Review</fullName>
            </value>
            <value>
                <fullName>Pending Internal</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>