force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Authorization_dollar_limit__c.field-meta.xml
<CustomField>
    <fullName>Authorization_dollar_limit__c</fullName>
    <inlineHelpText>Please indicate whether authorization is required</inlineHelpText>
    <label>Authorization $$ limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>