force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Authorization_limit_if_yes__c.field-meta.xml
<CustomField>
    <fullName>Authorization_limit_if_yes__c</fullName>
    <description>When authorization is required, explain when and at what dollar values.</description>
    <label>Authorization $$ limit if yes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>