force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Bill_per_trip_or_per_repair__c.field-meta.xml
<CustomField>
    <fullName>Bill_per_trip_or_per_repair__c</fullName>
    <label>Bill per trip or per repair</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Trip</fullName>
            </value>
            <value>
                <fullName>Per Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>