force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Billing_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Billing_Methodology__c</fullName>
    <label>Billing Methodology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Integrated (Service Bench)</fullName>
            </value>
            <value>
                <fullName>Excel Spreadsheet</fullName>
            </value>
            <value>
                <fullName>Other (must explain)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>