force-app/main/default/objects/Home_Services_BRD_Process__c/fields/BIT__c.field-meta.xml
<CustomField>
    <fullName>BIT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact on the Business Integration team who will project manage this BRD.</inlineHelpText>
    <label>BIT</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <errorMessage>You must select a BIT</errorMessage>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Business Integration</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E300000012Qh2</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Home Services Administrator</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e30000001tUpU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>BRD</relationshipName>
    <type>Lookup</type>
</CustomField>