force-app/main/default/objects/Home_Services_BRD_Process__c/fields/BIT_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>BIT_Assigned_Date__c</fullName>
    <description>Populated via Workflow when BIT field is assigned/changed</description>
    <label>BIT Assigned Date</label>
    <type>DateTime</type>
</CustomField>