force-app/main/default/objects/Home_Services_BRD_Process__c/fields/BRD_Approval_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>BRD_Approval_Process_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRD Approval Process Name</label>
    <referenceTo>Approval_Process__c</referenceTo>
    <relationshipName>Home_Services_BRD_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>