force-app/main/default/objects/Home_Services_BRD_Process__c/fields/BRD_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>BRD_Submission_Date__c</fullName>
    <inlineHelpText>Enter today&#39;s date to send to Business Integration</inlineHelpText>
    <label>BRD Submission Date</label>
    <type>Date</type>
</CustomField>