force-app/main/default/objects/Home_Services_BRD_Process__c/fields/BRD_Type__c.field-meta.xml
<CustomField>
    <fullName>BRD_Type__c</fullName>
    <label>BRD Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Opportunity</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>