force-app/main/default/objects/Home_Services_BRD_Process__c/fields/BRDId__c.field-meta.xml
<CustomField>
    <fullName>BRDId__c</fullName>
    <description>Used for attaching signed DocuSign document</description>
    <formula>Id</formula>
    <label>BRDId</label>
    <type>Text</type>
</CustomField>