force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Call_Volume_Next_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Call_Volume_Next_Fiscal__c</fullName>
    <formula>Opportunity__r.Call_Volume_Next_Fiscal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Volume Next Fiscal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>