force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Can_we_alternate_source_bo_parts_del__c.field-meta.xml
<CustomField>
    <fullName>Can_we_alternate_source_bo_parts_del__c</fullName>
    <inlineHelpText>Can we search for and purchase parts outside of the client to meet the commitment to the client and can we charge the client for those parts at the purchase cost?</inlineHelpText>
    <label>Can we alternate source b/o parts</label>
    <type>TextArea</type>
</CustomField>