force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Can_we_leave_behind_promotional_material__c.field-meta.xml
<CustomField>
    <fullName>Can_we_leave_behind_promotional_material__c</fullName>
    <label>Can we leave behind promotional material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>