force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Can_we_promote_PAs_on_service__c.field-meta.xml
<CustomField>
    <fullName>Can_we_promote_PAs_on_service__c</fullName>
    <inlineHelpText>Yes or No? If yes is it only for some of the service or all? And explain</inlineHelpText>
    <label>Can we promote PAs on service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>