force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Can_we_promote_VASP__c.field-meta.xml
<CustomField>
    <fullName>Can_we_promote_VASP__c</fullName>
    <label>Can we promote VASP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>