force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Capacity_Routing__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Routing__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>Capacity/Routing</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>