force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Carry_In__c.field-meta.xml
<CustomField>
    <fullName>Carry_In__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>Carry-In</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>