force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact on the Channel Mananger team who will project manage this Client.</inlineHelpText>
    <label>Channel Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Business Integration</value>
        </filterItems>
        <filterItems>
            <field>User.UserRoleId</field>
            <operation>equals</operation>
            <value>00E300000012Qh2</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>BRD_Channel_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>