force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Channel_Operations_OEM__c.field-meta.xml
<CustomField>
    <fullName>Channel_Operations_OEM__c</fullName>
    <inlineHelpText>Comments from Internal approvers via DocuSign</inlineHelpText>
    <label>Channel Operations-OEM</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>