force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Claims_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Claims_Contact_Email__c</fullName>
    <formula>Provide_claims_contact__r.Email</formula>
    <label>Claims Contact Email</label>
    <type>Text</type>
</CustomField>