force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Claims_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Claims_Contact_Phone__c</fullName>
    <formula>Provide_claims_contact__r.Phone</formula>
    <label>Claims Contact Phone</label>
    <type>Text</type>
</CustomField>