force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Client_MSO_needs_requirements__c.field-meta.xml
<CustomField>
    <fullName>Client_MSO_needs_requirements__c</fullName>
    <inlineHelpText>Please enter any additional detail about the call center process that are necessary.</inlineHelpText>
    <label>Client MSO needs/requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>