force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Client_schedule_or_through_our_system__c.field-meta.xml
<CustomField>
    <fullName>Client_schedule_or_through_our_system__c</fullName>
    <inlineHelpText>Does the client do the scheduling (i.e. commit a delivery date to the customer), or would they do that through our systems?</inlineHelpText>
    <label>Client schedule or through our system</label>
    <length>100</length>
    <type>Text</type>
</CustomField>