force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <inlineHelpText>OEM - Ex. Whirlpool
Retailer - Ex. HH Gregg
3rd Party - Ex. AHS, Assurant, Cross Country
SHC - Ex. KCD
Commercial
Other - Clients like yext who do not fit the above categories. Describe in detail in the opportunity narrative.</inlineHelpText>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>SHC</fullName>
            </value>
            <value>
                <fullName>SHO</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>