force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Contractual_Obligation_for_Op_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Obligation_for_Op_Metrics__c</fullName>
    <label>Contractual Obligation for Op Metrics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>