force-app/main/default/objects/Home_Services_BRD_Process__c/fields/CPSC_Involved__c.field-meta.xml
<CustomField>
    <fullName>CPSC_Involved__c</fullName>
    <inlineHelpText>Consumer Product Safety Commission</inlineHelpText>
    <label>CPSC Involved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>