force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Currently_sourced_by_supply_chain__c.field-meta.xml
<CustomField>
    <fullName>Currently_sourced_by_supply_chain__c</fullName>
    <label>Currently sourced by supply chain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>