force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Custom_Call_Center_Support_Requests__c.field-meta.xml
<CustomField>
    <fullName>Custom_Call_Center_Support_Requests__c</fullName>
    <inlineHelpText>Please describe Delivery/Install call center needs.</inlineHelpText>
    <label>Custom Call Center Support Requests</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>