force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Customer_Support__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support__c</fullName>
    <label>Customer Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Fulfillment</fullName>
            </value>
            <value>
                <fullName>Concession Processing</fullName>
            </value>
            <value>
                <fullName>Post-Fulfillment &amp;  Service Recovery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>