force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Date_list_will_be_available_attached__c.field-meta.xml
<CustomField>
    <fullName>Date_list_will_be_available_attached__c</fullName>
    <description>Please provide a list of specific zip codes.</description>
    <label>Date list will be available &amp; attached</label>
    <type>Date</type>
</CustomField>