force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Date_receive_list_of_products_details__c.field-meta.xml
<CustomField>
    <fullName>Date_receive_list_of_products_details__c</fullName>
    <inlineHelpText>This includes - list of brands, products and model numbers</inlineHelpText>
    <label>Date receive list of products details</label>
    <type>Date</type>
</CustomField>