force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Describe_licenses_retailer_has__c.field-meta.xml
<CustomField>
    <fullName>Describe_licenses_retailer_has__c</fullName>
    <inlineHelpText>Attach a document with additional license details if you run out of room in the field</inlineHelpText>
    <label>Describe licenses retailer has</label>
    <type>TextArea</type>
</CustomField>