force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Describe_parts_handling_process__c.field-meta.xml
<CustomField>
    <fullName>Describe_parts_handling_process__c</fullName>
    <label>Describe parts handling process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Use existing Sears Process</fullName>
            </value>
            <value>
                <fullName>Client Ships to the Customer</fullName>
            </value>
            <value>
                <fullName>Client Ships to Sears for Fulfillment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>