force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Details_of_hazardous_products__c.field-meta.xml
<CustomField>
    <fullName>Details_of_hazardous_products__c</fullName>
    <inlineHelpText>Please include part, type, model or serial numbers of the items that are classified as hazardous</inlineHelpText>
    <label>Details of hazardous products</label>
    <type>TextArea</type>
</CustomField>