force-app/main/default/objects/Home_Services_BRD_Process__c/fields/DocuSign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for DocuSign envelope so that the approval status (via DocuSign) can be tracked on the BRD record.  Can be populated (eg: most recent approved envelope) via trigger in the future.</description>
    <inlineHelpText>Connect the relevant and most current DocuSign envelope</inlineHelpText>
    <label>DocuSign Envelope</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>BRD</relationshipLabel>
    <relationshipName>Home_Services_BRD_Processes_del</relationshipName>
    <type>Lookup</type>
</CustomField>