force-app/main/default/objects/Home_Services_BRD_Process__c/fields/DocuSign_Envelope_Test__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Test__c</fullName>
    <label>DocuSign Envelope-Test</label>
    <length>20</length>
    <type>Text</type>
</CustomField>