force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Does_Client_have_tax_exempt_forms__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_have_tax_exempt_forms__c</fullName>
    <inlineHelpText>What tax exemption forms does the client have if any? If Yes - Client has to provide to Account Manager</inlineHelpText>
    <label>Does Client have tax exempt forms?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Repair_Only__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>