force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Does_Client_pre_screen_calls__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_pre_screen_calls__c</fullName>
    <label>Does Client pre-screen calls</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>