force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Existing_client_or_new_client__c.field-meta.xml
<CustomField>
    <fullName>Existing_client_or_new_client__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Account_Status__c)</formula>
    <label>Existing client or new client?</label>
    <type>Text</type>
</CustomField>