force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Existing_Operational_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Existing_Operational_Metrics__c</fullName>
    <inlineHelpText>Paste Client Profitability Dashboard Link, if not on dashboard please provide.</inlineHelpText>
    <label>Existing Operational Metrics</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>