force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Expected_Rollout__c.field-meta.xml
<CustomField>
    <fullName>Expected_Rollout__c</fullName>
    <label>Expected Rollout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Not Pilot</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Specific Market</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>