force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Expedited__c.field-meta.xml
<CustomField>
    <fullName>Expedited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIT to check if a BRD needs to be expedited through the process</description>
    <inlineHelpText>BIT to check if a BRD needs to be expedited through the process</inlineHelpText>
    <label>Expedited</label>
    <type>Checkbox</type>
</CustomField>