force-app/main/default/objects/Home_Services_BRD_Process__c/fields/Field_Support__c.field-meta.xml
<CustomField>
    <fullName>Field_Support__c</fullName>
    <inlineHelpText>What level of field support will be required?</inlineHelpText>
    <label>Field Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Fulfillment</fullName>
            </value>
            <value>
                <fullName>Post-Fulfillment &amp; Service Recovery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>